--- a/instagram-clone/src/components/PostContainer/PostContainer.scss
+++ b/instagram-clone/src/components/PostContainer/PostContainer.scss
@@ -5,9 +5,11 @@
   background-color: #fafafa;
   flex-grow: 1;
   align-items: stretch;
-  flex-direction: column;
   flex-shrink: 0;
-  margin: 0;
-  padding: 0;
   position: relative;
+  padding-top: 60px;
+  flex-flow: column nowrap;
+  max-width: 935px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
