--- a/instagram-clone/src/components/Post/Post.scss
+++ b/instagram-clone/src/components/Post/Post.scss
@@ -92,4 +92,123 @@
       }
     }
   }
+
+  .bottom-section {
+    padding: 0 16px;
+    align-items: stretch;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+
+    .actions {
+      margin-top: 4px;
+      flex-direction: row;
+      align-items: stretch;
+      display: flex;
+
+      .like {
+        display: inline-block;
+        margin-left: -8px;
+        .btn {
+          min-height: 40px;
+          min-width: 40px;
+          background: 0 0;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          padding: 0;
+          outline: 0!important;
+          border: 0;
+
+          .icon {
+            display: block;
+            outline: 0!important;
+            background-position: -271px -234px;
+            background-repeat: no-repeat;
+            height: 24px;
+            width: 24px;
+            background-image: url(https://www.instagram.com/static/bundles/es6/sprite_glyphs_c8c6b3ac563b.png/c8c6b3ac563b.png);
+          }
+        }
+      }
+
+      .comment {
+        display: inline-block;
+        .btn {
+          min-height: 40px;
+          min-width: 40px;
+          background: 0 0;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          padding: 0;
+          outline: 0!important;
+          border: 0;
+
+          .icon {
+            display: block;
+            outline: 0!important;
+            background-position: -161px -202px;
+            background-repeat: no-repeat;
+            height: 24px;
+            width: 24px;
+            background-image: url(https://www.instagram.com/static/bundles/es6/sprite_glyphs_c8c6b3ac563b.png/c8c6b3ac563b.png);
+          }
+        }
+      }
+
+      .share {
+        display: inline-block;
+        .btn {
+          min-height: 40px;
+          min-width: 40px;
+          background: 0 0;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          padding: 0;
+          outline: 0!important;
+          border: 0;
+
+          .icon {
+            display: block;
+            outline: 0!important;
+            background-position: -286px -286px;
+            background-repeat: no-repeat;
+            height: 24px;
+            width: 24px;
+            background-image: url(https://www.instagram.com/static/bundles/es6/sprite_glyphs_c8c6b3ac563b.png/c8c6b3ac563b.png);
+          }
+        }
+      }
+
+      .save {
+        display: inline-block;
+        margin-left: auto;
+        margin-right: -10px;
+        .btn {
+          min-height: 40px;
+          min-width: 40px;
+          background: 0 0;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          padding: 0;
+          outline: 0!important;
+          border: 0;
+
+          .icon {
+            display: block;
+            outline: 0!important;
+            background-position: -156px -286px;
+            background-repeat: no-repeat;
+            height: 24px;
+            width: 24px;
+            background-image: url(https://www.instagram.com/static/bundles/es6/sprite_glyphs_c8c6b3ac563b.png/c8c6b3ac563b.png);
+          }
+        }
+      }
+    }
+  }
 }
