--- a/instagram-clone/src/components/Post/Post.scss
+++ b/instagram-clone/src/components/Post/Post.scss
@@ -37,7 +37,8 @@
 
     p {
       color: #262626;
-      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        Helvetica, Arial, sans-serif;
       font-weight: 600;
     }
   }
@@ -118,12 +119,12 @@
           display: flex;
           justify-content: center;
           padding: 0;
-          outline: 0!important;
+          outline: 0 !important;
           border: 0;
 
           .icon {
             display: block;
-            outline: 0!important;
+            outline: 0 !important;
             background-position: -271px -234px;
             background-repeat: no-repeat;
             height: 24px;
@@ -143,12 +144,12 @@
           display: flex;
           justify-content: center;
           padding: 0;
-          outline: 0!important;
+          outline: 0 !important;
           border: 0;
 
           .icon {
             display: block;
-            outline: 0!important;
+            outline: 0 !important;
             background-position: -161px -202px;
             background-repeat: no-repeat;
             height: 24px;
@@ -168,12 +169,12 @@
           display: flex;
           justify-content: center;
           padding: 0;
-          outline: 0!important;
+          outline: 0 !important;
           border: 0;
 
           .icon {
             display: block;
-            outline: 0!important;
+            outline: 0 !important;
             background-position: -286px -286px;
             background-repeat: no-repeat;
             height: 24px;
@@ -195,12 +196,12 @@
           display: flex;
           justify-content: center;
           padding: 0;
-          outline: 0!important;
+          outline: 0 !important;
           border: 0;
 
           .icon {
             display: block;
-            outline: 0!important;
+            outline: 0 !important;
             background-position: -156px -286px;
             background-repeat: no-repeat;
             height: 24px;
@@ -218,7 +219,7 @@
       align-items: stretch;
       box-sizing: border-box;
       display: flex;
-      position : relative;
+      position: relative;
 
       .layer1 {
         flex: 1 1 auto;
@@ -256,6 +257,65 @@
       color: #999;
       margin-bottom: 5px;
       text-decoration: none;
+    }
+
+    .comment-field {
+      padding-left: 16px;
+      padding-right: 16px;
+      border-top: 1px solid #efefef;
+      font-size: 14px;
+      line-height: 18px;
+      min-height: 56px;
+      justify-content: center;
+      margin-top: 4px;
+      align-items: stretch;
+      display: flex;
+      flex-direction: column;
+
+      .layer1 {
+        align-items: stretch;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: row;
+        flex-shrink: 0;
+        position: relative;
+        margin: 0;
+        padding: 0;
+        color: #999;
+
+
+        textarea {
+          background: 0 0;
+          border: 0;
+          color: #262626;
+          height: 18px;
+          max-height: 80px;
+          outline: 0;
+          padding: 0;
+          resize: none;
+          display: flex;
+          flex-grow: 1;
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+            Helvetica, Arial, sans-serif;
+          line-height: 18px;
+        }
+
+        button {
+          opacity: 0.3;
+          pointer-events: none;
+          border: 0;
+          color: #3897f0;
+          display: inline;
+          padding: 0;
+          background: 0 0;
+          box-sizing: border-box;
+          cursor: pointer;
+          font-weight: 600;
+          text-align: center;
+          text-transform: inherit;
+          text-overflow: ellipsis;
+        }
+      }
     }
   }
 }
