Add ability to post comments by pressing enter

--- a/instagram-clone/src/components/Post/Post.scss
+++ b/instagram-clone/src/components/Post/Post.scss
@@ -288,7 +288,7 @@
         color: #999;
 
 
-        textarea {
+        input {
           background: 0 0;
           border: 0;
           color: #262626;
